// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RightDrawer /> tests should match snapshot for TemplateInputs drawer type 1`] = `
<div>
  <div
    class="drawer-mock"
  >
    <button
      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main closeButton Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-cross StyledProps--main"
        icon="cross"
      >
        <svg
          data-icon="cross"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            cross
          </desc>
          <path
            d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
    <div
      class="template-wrapper-inputs-mock"
    />
  </div>
</div>
`;

exports[`<RightDrawer /> tests should match snapshot for TemplateVariables drawer type 1`] = `
<div>
  <div
    class="drawer-mock"
  >
    <button
      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main closeButton Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-cross StyledProps--main"
        icon="cross"
      >
        <svg
          data-icon="cross"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            cross
          </desc>
          <path
            d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
    <div
      class="template-variables-wrapper-mock"
    />
  </div>
</div>
`;
